--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/lab": "^7.0.1-beta.19",
     "@mui/material": "^7.3.5",
+    "@mui/x-date-pickers": "^8.22.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "firebase": "^12.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
